Update overview static text layout

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -713,7 +713,11 @@
         "allRegions": "All Regions",
         "replicationFactor": "Replication Factor",
         "totalRam": "Total RAM",
-        "ramUsed": "RAM Used",
+        "totalvCPU": "Total vCPU",
+        "totalMemory": "Total Memory",
+        "totalDiskSize": "Total Disk Size",
+        "authentication": "Authentication",
+        "databaseVersion": "Database Version",
         "totalCores": "Total Cores",
         "totalNodes": "Total Nodes",
         "bootstrappingNodes": "Bootstrapping Nodes",
