Added unavailable tablet field and status icons

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -730,7 +730,7 @@
         "tablets": "Tablets",
         "total": "Total",
         "underReplicated": "Under-Replicated",
-        "unavailableTablets": "Unavailable Tablets"
+        "unavailable": "Unavailable"
       },
       "tables": {
         "numTables": "{{count}} Table",
