Activity and Alert section UI

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -729,6 +729,10 @@
         "deadNodes": "Dead Nodes",
         "tablets": "Tablets",
         "total": "Total",
+        "activities": "Activities",
+        "noActivities": "No in progress activities",
+        "alerts": "Alerts",
+        "noAlerts": "No unread alerts",
         "underReplicated": "Under-Replicated",
         "unavailable": "Unavailable"
       },
