Azure KMS to Key Vault

--- a/docs/content/preview/releases/release-notes/v2.15.md
+++ b/docs/content/preview/releases/release-notes/v2.15.md
@@ -101,7 +101,7 @@ docker pull yugabytedb/yugabyte:2.15.3.0-b231
 
 * [PLAT-3784] UI support for GCP KMS
 * [PLAT-3826] Switching default image to AlmaLinux8 for cloud providers
-* [PLAT-4164] UI support for Azure KMS
+* [PLAT-4164] UI support for Azure Key Vault
 * [PLAT-4704] [PLAT-5099] Add YBC Management APIs
 * [PLAT-4732] Support non-root Yba-installer workflow
 * [PLAT-4754] [DB-2913] Support expanding multi-AZ universe while a AZ is down
@@ -112,7 +112,7 @@ docker pull yugabytedb/yugabyte:2.15.3.0-b231
 * [PLAT-5090] Create Incremental backups
 * [PLAT-5142] Add API to upgrade k8s overrides.
 * [PLAT-5221] Add edit functionality for GCP KMS
-* [PLAT-5254] Add edit functionality for Azure KMS
+* [PLAT-5254] Add edit functionality for Azure Key Vault
 
 #### Database
 
