--- a/docs/content/preview/releases/yba-releases/v2.16.md
+++ b/docs/content/preview/releases/yba-releases/v2.16.md
@@ -270,7 +270,7 @@ docker pull yugabytedb/yugabyte:2.16.0.0-b90
 * [PLAT-6037] Prevent GFlags deletion through the Non-Restart upgrade option
 * [PLAT-6042] Fix Kubernetes CPU usage graph
 * [PLAT-6059] Fix configure_universe API
-* [PLAT-6074] Decrypt against all key versions for a key in azure KMS
+* [PLAT-6074] Decrypt against all key versions for a key in Azure Key Vault
 * [PLAT-6080] [Backup] [UI] Not able to select backups checkbox
 * [PLAT-6091] [PLAT-6126] Onprem custom home directory, Throw Bad Request in the case of a ybc backup restore to a non-ybc universe
 * [PLAT-6104] [Incremental Backups] [UI] Throw UI warning for full backup deletion request when associated incremental backup in progress
