--- a/docs/content/preview/releases/yba-releases/v2.17.md
+++ b/docs/content/preview/releases/yba-releases/v2.17.md
@@ -288,7 +288,7 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6065] Always Show YSQL and YCQL filter option in live queries tab
 * [PLAT-6070] Fix multi provider instance type caching
 * [PLAT-6071] [Master] Universe Task page throws JS console error and page is blank
-* [PLAT-6074] Decrypt against all key versions for a key in azure KMS
+* [PLAT-6074] Decrypt against all key versions for a key in Azure Key Vault
 * [PLAT-6076] Increase paramiko ssh-client banner_timeout
 * [PLAT-6078] Make dropdown scrollable in case of top K metrics
 * [PLAT-6080] [Backup] [UI] Not able to select backups checkbox
@@ -564,7 +564,7 @@ docker pull yugabytedb/yugabyte:2.17.0.0-b24
 * [PLAT-6042] Fix kubernetes CPU usage graph
 * [PLAT-6053] [PLAT-6054] Enable toggling force delete for xCluster config
 * [PLAT-6069] Fix: Incremental Backup location same as Full Backup Location
-* [PLAT-6074] Decrypt against all key versions for a key in azure KMS
+* [PLAT-6074] Decrypt against all key versions for a key in Azure Key Vault
 * [PLAT-6075] Fix: Bring backup duration for non-incremental and full backups
 * [PLAT-6080] [Backup] [UI] Not able to select backups checkbox
 * [PLAT-6123] [Backup] Show parallel thread if current backup is not YBC enabled
