--- a/docs/content/preview/releases/yba-releases/v2.17.md
+++ b/docs/content/preview/releases/yba-releases/v2.17.md
@@ -40,7 +40,7 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-4402] [PLAT-5540] Volume resize for k8s universes.
 * [PLAT-6195] Incremental Backup is now available as a Beta feature
 * [PLAT-6256] AmazonLinux2 based machines support in YBA.
-* [PLAT-6910] [PLAT-6921] [PLAT-6992] PITR is now available for software vesion 2.14 and up
+* [PLAT-6910] [PLAT-6921] [PLAT-6992] PITR is now available for software version 2.14 and up
 
 ### Improvements
 
@@ -48,7 +48,7 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-470] [k8s] Simplified k8s provider config for deploying into the same cluster as YW (#7394)
 * [PLAT-2677] [PLAT-4687] Add GFlags metadata dynamically from the DB package into the platform for every kind of releases
 * [PLAT-3595] Added a shell command to run kubectl diff before an upgrade and send output to log.
-* [PLAT-4465] Add cert-manager support for generating tls cert for Yugaware UI
+* [PLAT-4465] Add cert-manager support for generating TLS cert for Yugaware UI
 * [PLAT-4563] Add Tablet splitting docDB metrics
 * [PLAT-4591] [PLAT-4593] [K8s] [UI] Allow specifying universe level helm overrides in UI
 * [PLAT-4942] [PLAT-6501] Improve bundle load time of JS code and move from webpack to esbuild
@@ -106,7 +106,6 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6211] Add alerts for un-protected private ssh keys
 * [PLAT-6219] Condense and reduce the total number of metrics
 * [PLAT-6239] Upgrade the postgres version to 14.4
-* [PLAT-6239] Upgrade the postgres version to 14.4
 * [PLAT-6242] [PLAT-6243] Implement gRPC equivalent of SSH RemoteShell to communicate with node agent + ansible over gRPC
 * [PLAT-6254] Install and upgrade improvements: 2-directory install location, upgrade to an alt-install directory, revamped preflight checks for upgrades
 * [PLAT-6256] AmazonLinux2 based machines support in YBA.
@@ -141,7 +140,6 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-3763] Set kubeconfig file permissions to 600 when writing the file
 * [PLAT-3812] Verify that upgrade tasks don't need all the intent from ui
 * [PLAT-3915] [PLAT-6647] Read replica cluster should inherit YSQL enabled property from primary cluster
-* [PLAT-3915] Read replica cluster should inherit ysql enabled property from primary cluster
 * [PLAT-3926] Generate unique self-signed cert for nginx on first run
 * [PLAT-4006] Get progress in terms of tablet numbers during data migration.
 * [PLAT-4007] Do not wait for LB for added nodes
@@ -314,7 +312,6 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6154] Avoid deletion of expired backups with missing storage config
 * [PLAT-6160] Fix the VM Image upgrade issue with YBC.
 * [PLAT-6168] Fix intermittent failures on node reboot
-* [PLAT-6168] Fix intermittent failures on node reboot
 * [PLAT-6169] switching Azure default image back to CentOS 7
 * [PLAT-6171] Move expired backup deletion logic to the backup garbage collector
 * [PLAT-6181] Make dropdown scrollable in Runtime Config UI for Universe and Providers
@@ -328,15 +325,13 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6205] Prevent commenting of trust based auths for postgres connection
 * [PLAT-6210] Check all service status after install
 * [PLAT-6218] Change naming of auth enforced in reference.conf and make default value as false
-* [PLAT-6221]  YSQL or YCQL auth enforce config should be checked in backend for Create Universe
-* [PLAT-6227] Handle the scenario of the universe paused when making the PITR API calls
+* [PLAT-6221] YSQL or YCQL auth enforce config should be checked in backend for Create Universe
 * [PLAT-6227] Handle the scenario of the universe paused when making the PITR API calls
 * [PLAT-6231] [K8s] update log_cleanup.sh to recover from full disk
 * [PLAT-6233] Fix for vol resize failure during shrink
 * [PLAT-6234] Add foreign key constraint for access_key.provider_uuid
 * [PLAT-6237] Fix the universe API calls to send enableYbc as true only during create universe and software upgrade
 * [PLAT-6238] [UI] Add k8s info component in support bundle
-* [PLAT-6239] Adding Update Package task to enum
 * [PLAT-6239] Adding Update Package task to enum
 * [PLAT-6241] Adding log file for YBA in yba-installer
 * [PLAT-6246] [xCluster] Delete xCluster task should not change status if it is in DeletedUniverse status
@@ -365,7 +360,6 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6344] Customers can bring in linux users. Also confirm before we create a user
 * [Plat-6344] User check didn't get rebased correctly
 * [PLAT-6351] Allowing configuration of yba-installer Install Root
-* [PLAT-6354]  Remove LSM graphs that are no longer in metrics.yml
 * [PLAT-6354] Remove LSM graphs that are no longer in metrics.yml
 * [PLAT-6357] Renewable Vault token not renewed by YB
 * [PLAT-6358] Allow defining prometheus remote write config in helm chart
@@ -373,28 +367,22 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6363] API annotation to vmImages map
 * [PLAT-6367] Fix SdkClientException for no region found in default region chain AWS
 * [PLAT-6375] Fix protection level in auth config if using existing crypto key
-* [PLAT-6377] Seting instance type in node details of universe
+* [PLAT-6377] Setting instance type in node details of universe
 * [PLAT-6379] refactor cmd to follow cobra standards
 * [PLAT-6381] Remove access_key_code from api_examples of kubernetes API universe create call.
 * [PLAT-6396] Show error message from request in toast
-* [PLAT-6397] Move installThirdPartyPackageTask as part of backup/restore task group
 * [PLAT-6397] Move installThirdPartyPackageTask as part of backup/restore task group
 * [PLAT-6405] [PLAT-6437] Declare and use mutable keys with metadata in Java code
 * [PLAT-6424] Fixing yb_platform_backup.sh to work in docker environments
 * [PLAT-6438] [PLAT-6383] Add scope strictness and data validation when setting Runtime keys
 * [PLAT-6441] YBA-Installer Refactor
 * [PLAT-6443] S3 backup failing with s3cmd 2.3.0 version when access_token specified
-* [PLAT-6443] S3 backup failing with s3cmd 2.3.0 version when access_token specified
 * [PLAT-6444] Configure Throttle Parameters throws 404 and portal UI becomes blank when backup is in progress
-* [PLAT-6444] Configure Throttle Parameters throws 404 and portal UI becomes blank when backup is in progress
-* [PLAT-6452]  Remove old key from Master Advanced metric master_lsm_rocksdb_num_seek_or_next
 * [PLAT-6452] Remove old key from Master Advanced metric master_lsm_rocksdb_num_seek_or_next
 * [PLAT-6456] Update generate_kubeconfig.py to work on OpenShift 4.11
 * [PLAT-6458] Couldn't set backup interval to 1 Hour, getting error as "Incremental backup interval must be less than full backup"
-* [PLAT-6458] Couldn't set backup interval to 1 Hour, getting error as "Incremental backup interval must be less than full backup"
 * [PLAT-6459] Fix RemoteShell in devops python code to work with run_node_action.py
 * [PLAT-6460] Change the UI check during restore of YCQl tables backup to only check for non existence of the specific tables listed instead of forcing users to always restore to a non existent namespace.
-* [PLAT-6464] [Openshift] Support bundle creation failed with group id '1000720000' is too big
 * [PLAT-6464] [Openshift] Support bundle creation failed with group id '1000720000' is too big
 * [PLAT-6467] [UI] Show protection level in GCP KMS UI
 * [PLAT-6475] [PLAT-6787] [PLAT-6795] Fix systemd Resume universe failures, Restart ybc on hot cert reload, and Do nothing in the case of nonRestartUpgrade
@@ -407,7 +395,6 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6497] [Master] Support Bundle Download failed with Error while trying to download the node level component files
 * [PLAT-6499] Copy the ybc packages to /opt/yugabyte/ybc/release if MOVE_YBC_PKG=1
 * [PLAT-6509] [Read Replica] Wrong number of nodes in add read replica
-* [PLAT-6509] [Read Replica] Wrong number of nodes in add read replica
 * [PLAT-6517] Configure waiter for snapshot creation
 * [PLAT-6517] Increase max attempts for waiter during snapshot creation
 * [PLAT-6519] [yugaware] Collect only YBDB pod's metrics from K8s nodes
@@ -416,10 +403,8 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6527] Background Scheduled backup and any other tasks should honor lameduck and retry
 * [PLAT-6531] [UI] Backup config css is overriding global Divider's css
 * [PLAT-6544] Aborting a YB-Controller task from UI not propagating to YBC
-* [PLAT-6544] Aborting a YB-Controller task from UI not propagating to YBC
 * [PLAT-6568] Fix for Minio endpoint using HTTPS
 * [PLAT-6570] Add script to enable attaching/detaching of universe
-* [PLAT-6577] The Parallel Threads text box is not visible when restoring a non ybc backup onto a universe that has ybc installed on it.
 * [PLAT-6577] The Parallel Threads text box is not visible when restoring a non ybc backup onto a universe that has ybc installed on it.
 * [PLAT-6578] Showing wrong cluster uuid in third party software upgrade
 * [PLAT-6580] Configure Throttle Parameters vaules are not saved
@@ -448,7 +433,6 @@ docker pull yugabytedb/yugabyte:2.17.1.0-b439
 * [PLAT-6742] PITR UI: On clicking on the Advanced dropdown, the opened tab changes from PITR to Backups.
 * [PLAT-6745] Blank page on canceling edit on the PITR date/time picker
 * [PLAT-6754] Add warning to create universe API toggles
-* [PLAT-6763] Fix Response size graph
 * [PLAT-6763] Fix Response size graph
 * [PLAT-6766] [xCluster] X-cluster replication is failing due to NPE
 * [PLAT-6771] [PITR] [UI] Wrap the large keyspace/Database name within PITR modal
