--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -145,6 +145,8 @@
         "ebs": "EBS Type",
         "ephemeralStorage": "! Selected instance type is with ephemeral storage, If you will pause this universe your data will get lost.",
         "instanceType": "Instance Type",
+        "k8NumCores": "Number of Cores",
+        "k8Memory": "Memory (GB)",
         "kmsConfig": "Key Management Service Config",
         "kmsConfigPlaceHolder": "Select Configuration",
         "provisionedIops": "Provisioned IOPS",
