[PLAT-5370][UI] Add Custom Variable Support for Email Notification Template
Summary:
Added:
Custom variable creation modal.

All features are behind feature flag

[[ https://www.figma.com/file/Jahyk9bTcrjTF9kUDhMqgf/Custom-Notification-Template?node-id=382%3A32101&t=HgVWhKzUGqOnC2iR-0 | Figma ]]

[[ https://docs.google.com/spreadsheets/d/1pRnOEqqQrY-KejW8q48B4WlTEm-gzF1C684w5XkyjqQ/edit?usp=sharing | Code Review Checklist ]]

Test Plan:
tested manually

{F34930}
{F34931}
{F34932}
{F34933}
{F34934}
{F34935}
{F34936}

Reviewers: jmak, rmadhavan, lsangappa, asathyan

Reviewed By: lsangappa, asathyan

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23120

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -314,6 +314,32 @@
           "StringListTooltipMessage": "['foo', 'bar']"
         }
       }
+    },
+    "alertCustomTemplates": {
+      "customVariables": {
+        "addNewVariableText": "Create your own variables with <bold> customized value </bold> to use in the notification templates.",
+        "createNewVariableButton": "Create Custom Variable",
+        "systemVariables": "System Variables",
+        "assignVariablesButton":"Assign Variable Value to Alert Policies",
+        "customVariableContextMenu": {
+          "editVariable": "Edit Variable",
+          "variableDetails": "Variable Details",
+          "deleteVariable": "Delete Variable"
+        },
+        "variableText": "Variable",
+        "deleteSuccess":"Successfully deleted custom variable <u>{{variable_name}}</u>",
+        "createSuccess": "Successfully created custom variable <u>{{variable_name}}</u>",
+        "editSuccess": "Successfully edited custom variable <u>{{variable_name}}</u>",
+        "createNewVariableModal": {
+          "title": "Create Custom Variable",
+          "editTitle": "Edit Custom Variable",
+          "name": "Name",
+          "values": "Values",
+          "default": "Default",
+          "addValuesButton": "Add Values",
+          "valuesHelpText": "Define the possible values for the variable. Set one of the values as the <bold>default</bold> to use for all alerts that use the notification template. You can choose a value when configuring the alert policy."
+        }
+      }
     }
   }
 }
