[PLAT-7038][UI] Manage Variables by Alert Policy
Summary:
Implemented Manage variables by alert policy

[[ https://www.figma.com/file/Jahyk9bTcrjTF9kUDhMqgf/Custom-Notification-Template?node-id=565%3A27648&t=gKvvUS3ITbP4pHuv-0 | Figma ]]

Test Plan:
Tested manually

{F35130}
{F35131}
{F35132}

Reviewers: asathyan, jmak, rmadhavan, lsangappa

Reviewed By: lsangappa

Subscribers: jenkins-bot, ui, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23348

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -10,7 +10,9 @@
       "requiredField": "Required field",
       "save": "Save",
       "validateAndSave": "Validate and Save",
-      "yes": "Yes"
+      "yes": "Yes",
+      "close": "Close",
+      "saving": "Saving"
     },
     "commonErrors": {
       "pageNotExist": "Seems like this Page does not exist",
@@ -338,6 +340,13 @@
           "default": "Default",
           "addValuesButton": "Add Values",
           "valuesHelpText": "Define the possible values for the variable. Set one of the values as the <bold>default</bold> to use for all alerts that use the notification template. You can choose a value when configuring the alert policy."
+        },
+        "assignCustomVariableValueModal":{
+          "title": "Assign Variable Value to Alert Policies",
+          "searchHelpText": "For each alert policy, choose the variable value to display in alert notifications.",
+          "searchInputPlaceHolder": "Filter by alert policy name",
+          "menuDefault": "(default)",
+          "tablePolicyHeader": "Alert Policies"
         }
       }
     }
