order and date change

--- a/docs/content/preview/releases/release-notes/v2.16.md
+++ b/docs/content/preview/releases/release-notes/v2.16.md
@@ -30,7 +30,7 @@ YugabyteDB releases in the v2.16 series prior to v2.16.1.1 contain a backup issu
 If you're using a previous v2.16 database version, you won't be able to successfully perform backups until you upgrade to YugabyteDB 2.16.1.1 or later.
 {{< /warning >}}
 
-## v2.16.2.0 - March 10, 2023 {#v2.16.2.0}
+## v2.16.2.0 - March 7, 2023 {#v2.16.2.0}
 
 **Build:** `2.16.2.0-b41`
 
@@ -77,7 +77,7 @@ docker pull yugabytedb/yugabyte:2.16.2.0-b41
 * [[12631](https://github.com/yugabyte/yugabyte-db/issues/12631)] [DocDB] [YSQL] Update PGTableDesc table cache when partition list version is outdated
 * [[15761](https://github.com/yugabyte/yugabyte-db/issues/15761)] [YSQL] Avoid caching responses for auth process
 * [[15807](https://github.com/yugabyte/yugabyte-db/issues/15807)] [DocDB] Ensure IntraTxnWriteId is properly decoded even in weak lock intents
-* [[15952](https://github.com/yugabyte/yugabyte-db/issues/15952)] [YSQL] Reduce verbosity of a Postgres log line in read committed isolation level codepath
+* [[15952](https://github.com/yugabyte/yugabyte-db/issues/15952)] [YSQL] Reduce verbosity of a PostgreSQL log line in read committed isolation level codepath
 * [[16034](https://github.com/yugabyte/yugabyte-db/issues/16034)] [[15933](https://github.com/yugabyte/yugabyte-db/issues/15933)] [YSQL] Avoid picking hybrid timestamps in YSQL backends
 * [[16147](https://github.com/yugabyte/yugabyte-db/issues/16147)] [CDCSDK] Checkpoint set to 0.0 from raft superblock in upgrade scenarios
 * [[16147](https://github.com/yugabyte/yugabyte-db/issues/16147)] [CDCSDK] Correctly set cdc_sdk_min_checkpoint_op_id to -1.-1 in upgrade scenarios
@@ -88,11 +88,11 @@ docker pull yugabytedb/yugabyte:2.16.2.0-b41
 * [[13891](https://github.com/yugabyte/yugabyte-db/issues/13891)] [Backfill] Do not update index permissions when table is being deleted
 * [[14556](https://github.com/yugabyte/yugabyte-db/issues/14556)] [DocDB] Prevent momentary data masking during IntentAwareIterator scans in index backfill
 * [[14961](https://github.com/yugabyte/yugabyte-db/issues/14961)] [[14962](https://github.com/yugabyte/yugabyte-db/issues/14962)]
-* [[15840](https://github.com/yugabyte/yugabyte-db/issues/15840)] [YSQL] Further reduce first-query metadata RPCs
-* [[15286](https://github.com/yugabyte/yugabyte-db/issues/15286)] [YSQL] Fix premature return in PG_TRY block in relcache.c
+* [[15286](https://github.com/yugabyte/yugabyte-db/issues/15286)] [YSQL] Fix premature return in PG_TRY block in `relcache.c`
 * [[15626](https://github.com/yugabyte/yugabyte-db/issues/15626)] Move mac release builds to mac12 nodes
 * [[15649](https://github.com/yugabyte/yugabyte-db/issues/15649)] fix auto re-running cmake
 * [[15820](https://github.com/yugabyte/yugabyte-db/issues/15820)] [YSQL] fix ybgin index scan after DROP COLUMN
+* [[15840](https://github.com/yugabyte/yugabyte-db/issues/15840)] [YSQL] Further reduce first-query metadata RPCs
 * [[15849](https://github.com/yugabyte/yugabyte-db/issues/15849)] [DocDB] Don't hold mutex when starting TransactionStatusResolver
 * [[15863](https://github.com/yugabyte/yugabyte-db/issues/15863)] [Backfill] Fixed race in Tablet::FlushWriteIndexBatch
 * [[15874](https://github.com/yugabyte/yugabyte-db/issues/15874)] [YCQL] Fix wrong metadata version with pagination on SELECT using Index
