addressed review comments

--- a/docs/content/preview/releases/release-notes/v2.16.md
+++ b/docs/content/preview/releases/release-notes/v2.16.md
@@ -75,6 +75,7 @@ docker pull yugabytedb/yugabyte:2.16.2.0-b41
 ### Improvements
 
 * [[12631](https://github.com/yugabyte/yugabyte-db/issues/12631)] [DocDB] [YSQL] Update PGTableDesc table cache when partition list version is outdated
+* [[14961](https://github.com/yugabyte/yugabyte-db/issues/14961)] [[14962](https://github.com/yugabyte/yugabyte-db/issues/14962)] [[15840](https://github.com/yugabyte/yugabyte-db/issues/15840)] [YSQL] Further reduce first-query metadata RPCs
 * [[15761](https://github.com/yugabyte/yugabyte-db/issues/15761)] [YSQL] Avoid caching responses for auth process
 * [[15807](https://github.com/yugabyte/yugabyte-db/issues/15807)] [DocDB] Ensure IntraTxnWriteId is properly decoded even in weak lock intents
 * [[15952](https://github.com/yugabyte/yugabyte-db/issues/15952)] [YSQL] Reduce verbosity of a PostgreSQL log line in read committed isolation level codepath
@@ -87,12 +88,10 @@ docker pull yugabytedb/yugabyte:2.16.2.0-b41
 * [[13379](https://github.com/yugabyte/yugabyte-db/issues/13379)] [DocDB] Fix BlockBasedTable memtracker being unregistered in Tablet destructor
 * [[13891](https://github.com/yugabyte/yugabyte-db/issues/13891)] [Backfill] Do not update index permissions when table is being deleted
 * [[14556](https://github.com/yugabyte/yugabyte-db/issues/14556)] [DocDB] Prevent momentary data masking during IntentAwareIterator scans in index backfill
-* [[14961](https://github.com/yugabyte/yugabyte-db/issues/14961)] [[14962](https://github.com/yugabyte/yugabyte-db/issues/14962)]
 * [[15286](https://github.com/yugabyte/yugabyte-db/issues/15286)] [YSQL] Fix premature return in PG_TRY block in `relcache.c`
 * [[15626](https://github.com/yugabyte/yugabyte-db/issues/15626)] Move mac release builds to mac12 nodes
 * [[15649](https://github.com/yugabyte/yugabyte-db/issues/15649)] fix auto re-running cmake
 * [[15820](https://github.com/yugabyte/yugabyte-db/issues/15820)] [YSQL] fix ybgin index scan after DROP COLUMN
-* [[15840](https://github.com/yugabyte/yugabyte-db/issues/15840)] [YSQL] Further reduce first-query metadata RPCs
 * [[15849](https://github.com/yugabyte/yugabyte-db/issues/15849)] [DocDB] Don't hold mutex when starting TransactionStatusResolver
 * [[15863](https://github.com/yugabyte/yugabyte-db/issues/15863)] [Backfill] Fixed race in Tablet::FlushWriteIndexBatch
 * [[15874](https://github.com/yugabyte/yugabyte-db/issues/15874)] [YCQL] Fix wrong metadata version with pagination on SELECT using Index
