Activity drawer UI

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -1098,6 +1098,15 @@
         "pauseCluster": "Pause Cluster",
         "resumeCluster": "Resume Cluster",
         "unknown": "Unknown",
+        "details": {
+          "title": "Activity Details",
+          "operationName": "Operation Name",
+          "status": "Operation Status",
+          "jobID": "Job ID",
+          "startTime": "Start Time",
+          "elapsedTime": "Elapsed Time",
+          "progress": "Progress"
+        },
         "statusEnum": {
           "failed": "Failed",
           "completed": "Completed",
