[PLAT-7479]Add a warning dialog when deleting KMS config
Summary:
  # Added a warning dialog when deleting KMS config
  # Increased dialog action button height

**Figma:-**
https://www.figma.com/file/BU3vZUOtZh10nlKa3unK5h/TLS-configuration--Master-key---Server-Cert?node-id=1156%3A28378&t=XvEPudhhenes0YFD-1

Test Plan:
Tested manually

{F35169}

{F35170}

Reviewers: kkannan, jmak, rmadhavan, lsangappa

Reviewed By: lsangappa

Subscribers: jenkins-bot, ui, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23387

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -40,6 +40,15 @@
       "pageNotExist": "Seems like this Page does not exist",
       "pageNotFound": "Page not found"
     },
+    "config": {
+      "security": {
+        "encryptionAtRest": {
+          "deleteKmsConfig": "Delete Configuration",
+          "deleteConfigConfirmText": "Are you sure you want to delete <0>{{configName}}</0> configuration?",
+          "deleteConfigWarning": "Before deleting this configuration make sure it's not being used by any backups. Note that in order to restore a backup with deleted KMS config <0></0> you'll need to create a new KMS config with the same master key details."
+        }
+      }
+    },
     "universeForm": {
       "master": "Master",
       "tserver": "TServer",
