[PLAT-7474] UI to opt for spot instances while creating a universe
Summary:
Added UI to set the usage of spot instances during universe creation if an appropriate AWS
provider is selected

Test Plan:
Tested Manually on universes with- 1) Provider with spot instances usage enabled: a) Spot
Instange Use Toggled, b) Spot Instance usage deselected, 2) Provider without spot instance usage
enabled: Toggle is not visible and universe is not created with spot instances

Reviewers: asharma, lsangappa

Reviewed By: lsangappa

Subscribers: jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D23554

--- a/managed/ui/src/translations/en.json
+++ b/managed/ui/src/translations/en.json
@@ -189,6 +189,7 @@
         "instanceType": "Instance Type",
         "k8NumCores": "Number of Cores",
         "k8Memory": "Memory (GB)",
+        "useSpotInstance": "Use Spot Instances",
         "kmsConfig": "Key Management Service Config",
         "kmsConfigPlaceHolder": "Select Configuration",
         "provisionedIops": "Provisioned IOPS",
