Databases page UI

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -757,6 +757,34 @@
         "ysql": "YSQL",
         "ycql": "YCQL"
       },
+      "databases": {
+        "tabYsql": "YSQL",
+        "tabYcql": "YCQL",
+        "ysqlDatabases": "YSQL Databases",
+        "ycqlKeyspaces": "YCQL Keyspaces",
+        "noDatabases": "There are no databases available",
+        "totalTables": "Total Tables",
+        "totalTablets": "Total tablets",
+        "totalSize": "Total Size",
+        "underReplicatedTables": "Under-replicated Tables",
+        "underReplicated": "Under-replicated",
+        "searchTableName": "Search table name",
+        "searchTabletID": "Search tablet ID",
+        "healthyReplication": "Healthy replication",
+        "unavailable": "Unavailable",
+        "tabletStatus": "Tablet Status",
+        "allNodes": "All Nodes",
+        "allStatuses": "All statuses",
+        "tabletID": "Tablet ID",
+        "tabletRange": "Tablet range",
+        "leaderNode": "Leader node",
+        "followerNodes": "Follower nodes",
+        "database": "Database",
+        "keyspace": "Keyspace",
+        "table": "Table",
+        "partition": "Partition",
+        "size": "Size"
+      },
       "maintenance": {
         "maintenanceTitle": "Scheduled Maintenance",
         "description": "Description",
