vCPU sankey chart in the performance page

--- a/yugabyted-ui/ui/src/translations/en.json
+++ b/yugabyted-ui/ui/src/translations/en.json
@@ -869,6 +869,8 @@
           "displayMetrics": "DISPLAY THE FOLLOWING METRICS:",
           "region": "region",
           "regions": "regions",
+          "vCpuUsage": "vCPU Usage",
+          "totalVCpu": "Total vCPU Usage",
           "options": {
             "overall": "Overall",
             "general": "General",
